my_parser/query/QueryParser.py
# Generated from Query.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class QueryParser ( Parser ):

    grammarFileName = "Query.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'&'", "'%26'", "<INVALID>", "<INVALID>", 
                     "'*'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'~'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'#'" ]

    symbolicNames = [ "<INVALID>", "LET_DIG_S_LET", "LET_DIG", "SLASH", 
                      "WS", "CAMMA", "DIGIT", "LETTER", "QUOTE", "DQUOTE", 
                      "HYPHEN", "US", "EQ", "DOT", "B_SLASH", "QM", "PERCENT", 
                      "CH_AND", "CH_AND_HEX", "COLON", "SEMI_COLON", "STAR", 
                      "PAR_O", "PAR_C", "BRACK", "ACOLAD", "DOLLAR", "ADSGN", 
                      "EXCAM_SGN", "BIN_INVERT", "IRG_SGN1", "CH_OR", "LT_SGN", 
                      "GT_SGN", "HASTAG", "HASHTAG" ]

    RULE_query = 0
    RULE_p_id = 1
    RULE_q_value = 2
    RULE_value = 3
    RULE_ilg = 4
    RULE_label = 5
    RULE_delim = 6
    RULE_ch_ilg = 7
    RULE_ldse = 8
    RULE_opNot = 9
    RULE_opBinInvert = 10
    RULE_opEqual = 11
    RULE_opLt = 12
    RULE_opGt = 13
    RULE_opMinus = 14
    RULE_opSem = 15
    RULE_cmt = 16
    RULE_ddash = 17
    RULE_quote = 18
    RULE_dquote = 19
    RULE_us_sgn = 20
    RULE_c_and = 21
    RULE_c_and_hex = 22
    RULE_c_or = 23
    RULE_c_slash = 24
    RULE_c_dot = 25
    RULE_c_colon = 26
    RULE_s_bslash = 27
    RULE_c_q = 28
    RULE_par_open = 29
    RULE_par_close = 30
    RULE_c_star = 31
    RULE_c_percent = 32
    RULE_c_brack = 33
    RULE_c_acolad = 34
    RULE_c_dollar = 35
    RULE_c_adsgn = 36
    RULE_c_irg1 = 37

    ruleNames =  [ "query", "p_id", "q_value", "value", "ilg", "label", 
                   "delim", "ch_ilg", "ldse", "opNot", "opBinInvert", "opEqual", 
                   "opLt", "opGt", "opMinus", "opSem", "cmt", "ddash", "quote", 
                   "dquote", "us_sgn", "c_and", "c_and_hex", "c_or", "c_slash", 
                   "c_dot", "c_colon", "s_bslash", "c_q", "par_open", "par_close", 
                   "c_star", "c_percent", "c_brack", "c_acolad", "c_dollar", 
                   "c_adsgn", "c_irg1" ]

    EOF = Token.EOF
    LET_DIG_S_LET=1
    LET_DIG=2
    SLASH=3
    WS=4
    CAMMA=5
    DIGIT=6
    LETTER=7
    QUOTE=8
    DQUOTE=9
    HYPHEN=10
    US=11
    EQ=12
    DOT=13
    B_SLASH=14
    QM=15
    PERCENT=16
    CH_AND=17
    CH_AND_HEX=18
    COLON=19
    SEMI_COLON=20
    STAR=21
    PAR_O=22
    PAR_C=23
    BRACK=24
    ACOLAD=25
    DOLLAR=26
    ADSGN=27
    EXCAM_SGN=28
    BIN_INVERT=29
    IRG_SGN1=30
    CH_OR=31
    LT_SGN=32
    GT_SGN=33
    HASTAG=34
    HASHTAG=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p_id(self):
            return self.getTypedRuleContext(QueryParser.P_idContext,0)


        def opEqual(self):
            return self.getTypedRuleContext(QueryParser.OpEqualContext,0)


        def q_value(self):
            return self.getTypedRuleContext(QueryParser.Q_valueContext,0)


        def EOF(self):
            return self.getToken(QueryParser.EOF, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.QueryContext)
            else:
                return self.getTypedRuleContext(QueryParser.QueryContext,i)


        def c_and(self):
            return self.getTypedRuleContext(QueryParser.C_andContext,0)


        def getRuleIndex(self):
            return QueryParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)



    def query(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = QueryParser.QueryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_query, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 77
                self.p_id()
                self.state = 78
                self.opEqual()
                self.state = 79
                self.q_value(0)
                pass

            elif la_ == 2:
                self.state = 81
                self.p_id()
                pass

            elif la_ == 3:
                self.state = 82
                self.match(QueryParser.EOF)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 91
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = QueryParser.QueryContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_query)
                    self.state = 85
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 86
                    self.c_and()
                    self.state = 87
                    self.query(5) 
                self.state = 93
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class P_idContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ldse(self):
            return self.getTypedRuleContext(QueryParser.LdseContext,0)


        def p_id(self):
            return self.getTypedRuleContext(QueryParser.P_idContext,0)


        def us_sgn(self):
            return self.getTypedRuleContext(QueryParser.Us_sgnContext,0)


        def label(self):
            return self.getTypedRuleContext(QueryParser.LabelContext,0)


        def getRuleIndex(self):
            return QueryParser.RULE_p_id

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP_id" ):
                listener.enterP_id(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP_id" ):
                listener.exitP_id(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP_id" ):
                return visitor.visitP_id(self)
            else:
                return visitor.visitChildren(self)




    def p_id(self):

        localctx = QueryParser.P_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_p_id)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.ldse()
                self.state = 95
                self.p_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.us_sgn()
                self.state = 98
                self.p_id()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.label()
                self.state = 101
                self.p_id()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.label()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.us_sgn()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Q_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.ValueContext)
            else:
                return self.getTypedRuleContext(QueryParser.ValueContext,i)


        def EOF(self):
            return self.getToken(QueryParser.EOF, 0)

        def q_value(self):
            return self.getTypedRuleContext(QueryParser.Q_valueContext,0)


        def delim(self):
            return self.getTypedRuleContext(QueryParser.DelimContext,0)


        def getRuleIndex(self):
            return QueryParser.RULE_q_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQ_value" ):
                listener.enterQ_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQ_value" ):
                listener.exitQ_value(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQ_value" ):
                return visitor.visitQ_value(self)
            else:
                return visitor.visitChildren(self)



    def q_value(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = QueryParser.Q_valueContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_q_value, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QueryParser.LET_DIG_S_LET, QueryParser.LET_DIG, QueryParser.SLASH, QueryParser.WS, QueryParser.CAMMA, QueryParser.QUOTE, QueryParser.DQUOTE, QueryParser.HYPHEN, QueryParser.US, QueryParser.EQ, QueryParser.DOT, QueryParser.B_SLASH, QueryParser.QM, QueryParser.PERCENT, QueryParser.CH_AND_HEX, QueryParser.COLON, QueryParser.SEMI_COLON, QueryParser.STAR, QueryParser.PAR_O, QueryParser.PAR_C, QueryParser.BRACK, QueryParser.ACOLAD, QueryParser.DOLLAR, QueryParser.ADSGN, QueryParser.EXCAM_SGN, QueryParser.BIN_INVERT, QueryParser.IRG_SGN1, QueryParser.CH_OR, QueryParser.LT_SGN, QueryParser.GT_SGN]:
                self.state = 109 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 108
                        self.value()

                    else:
                        raise NoViableAltException(self)
                    self.state = 111 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass
            elif token in [QueryParser.EOF]:
                self.state = 113
                self.match(QueryParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = QueryParser.Q_valueContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_q_value)
                    self.state = 116
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 117
                    self.delim()
                    self.state = 119 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 118
                            self.value()

                        else:
                            raise NoViableAltException(self)
                        self.state = 121 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
             
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def label(self):
            return self.getTypedRuleContext(QueryParser.LabelContext,0)


        def ilg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.IlgContext)
            else:
                return self.getTypedRuleContext(QueryParser.IlgContext,i)


        def getRuleIndex(self):
            return QueryParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = QueryParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QueryParser.LET_DIG_S_LET, QueryParser.LET_DIG]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.label()
                pass
            elif token in [QueryParser.SLASH, QueryParser.WS, QueryParser.CAMMA, QueryParser.QUOTE, QueryParser.DQUOTE, QueryParser.HYPHEN, QueryParser.US, QueryParser.EQ, QueryParser.DOT, QueryParser.B_SLASH, QueryParser.QM, QueryParser.PERCENT, QueryParser.CH_AND_HEX, QueryParser.COLON, QueryParser.SEMI_COLON, QueryParser.STAR, QueryParser.PAR_O, QueryParser.PAR_C, QueryParser.BRACK, QueryParser.ACOLAD, QueryParser.DOLLAR, QueryParser.ADSGN, QueryParser.EXCAM_SGN, QueryParser.BIN_INVERT, QueryParser.IRG_SGN1, QueryParser.CH_OR, QueryParser.LT_SGN, QueryParser.GT_SGN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 129
                        self.ilg()

                    else:
                        raise NoViableAltException(self)
                    self.state = 132 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IlgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opMinus(self):
            return self.getTypedRuleContext(QueryParser.OpMinusContext,0)


        def us_sgn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.Us_sgnContext)
            else:
                return self.getTypedRuleContext(QueryParser.Us_sgnContext,i)


        def c_colon(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.C_colonContext)
            else:
                return self.getTypedRuleContext(QueryParser.C_colonContext,i)


        def c_slash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.C_slashContext)
            else:
                return self.getTypedRuleContext(QueryParser.C_slashContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(QueryParser.WS)
            else:
                return self.getToken(QueryParser.WS, i)

        def CAMMA(self):
            return self.getToken(QueryParser.CAMMA, 0)

        def c_percent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.C_percentContext)
            else:
                return self.getTypedRuleContext(QueryParser.C_percentContext,i)


        def s_bslash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.S_bslashContext)
            else:
                return self.getTypedRuleContext(QueryParser.S_bslashContext,i)


        def opSem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.OpSemContext)
            else:
                return self.getTypedRuleContext(QueryParser.OpSemContext,i)


        def c_q(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.C_qContext)
            else:
                return self.getTypedRuleContext(QueryParser.C_qContext,i)


        def opEqual(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.OpEqualContext)
            else:
                return self.getTypedRuleContext(QueryParser.OpEqualContext,i)


        def ch_ilg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.Ch_ilgContext)
            else:
                return self.getTypedRuleContext(QueryParser.Ch_ilgContext,i)


        def c_dot(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(QueryParser.C_dotContext)
            else:
                return self.getTypedRuleContext(QueryParser.C_dotContext,i)


        def getRuleIndex(self):
            return QueryParser.RULE_ilg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIlg" ):
                listener.enterIlg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIlg" ):
                listener.exitIlg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIlg" ):
                return visitor.visitIlg(self)
            else:
                return visitor.visitChildren(self)




    def ilg(self):

        localctx = QueryParser.IlgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ilg)
        try:
            self.state = 193
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QueryParser.HYPHEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.opMinus()
                pass
            elif token in [QueryParser.US]:
                self.enterOuterAlt(localctx, 2)
                self.state = 138 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 137
                        self.us_sgn()

                    else:
                        raise NoViableAltException(self)
                    self.state = 140 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

                pass
            elif token in [QueryParser.COLON]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 142
                        self.c_colon()

                    else:
                        raise NoViableAltException(self)
                    self.state = 145 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                pass
            elif token in [QueryParser.SLASH]:
                self.enterOuterAlt(localctx, 4)
                self.state = 148 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 147
                        self.c_slash()

                    else:
                        raise NoViableAltException(self)
                    self.state = 150 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass
            elif token in [QueryParser.WS]:
                self.enterOuterAlt(localctx, 5)
                self.state = 153 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 152
                        self.match(QueryParser.WS)

                    else:
                        raise NoViableAltException(self)
                    self.state = 155 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass
            elif token in [QueryParser.CAMMA]:
                self.enterOuterAlt(localctx, 6)
                self.state = 157
                self.match(QueryParser.CAMMA)
                pass
            elif token in [QueryParser.PERCENT]:
                self.enterOuterAlt(localctx, 7)
                self.state = 159 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 158
                        self.c_percent()

                    else:
                        raise NoViableAltException(self)
                    self.state = 161 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                pass
            elif token in [QueryParser.B_SLASH]:
                self.enterOuterAlt(localctx, 8)
                self.state = 164 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 163
                        self.s_bslash()

                    else:
                        raise NoViableAltException(self)
                    self.state = 166 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                pass
            elif token in [QueryParser.SEMI_COLON]:
                self.enterOuterAlt(localctx, 9)
                self.state = 169 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 168
                        self.opSem()

                    else:
                        raise NoViableAltException(self)
                    self.state = 171 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

                pass
            elif token in [QueryParser.QM]:
                self.enterOuterAlt(localctx, 10)
                self.state = 174 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 173
                        self.c_q()

                    else:
                        raise NoViableAltException(self)
                    self.state = 176 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

                pass
            elif token in [QueryParser.EQ]:
                self.enterOuterAlt(localctx, 11)
                self.state = 179 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 178
                        self.opEqual()

                    else:
                        raise NoViableAltException(self)
                    self.state = 181 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

                pass
            elif token in [QueryParser.QUOTE, QueryParser.DQUOTE, QueryParser.CH_AND_HEX, QueryParser.STAR, QueryParser.PAR_O, QueryParser.PAR_C, QueryParser.BRACK, QueryParser.ACOLAD, QueryParser.DOLLAR, QueryParser.ADSGN, QueryParser.EXCAM_SGN, QueryParser.BIN_INVERT, QueryParser.IRG_SGN1, QueryParser.CH_OR, QueryParser.LT_SGN, QueryParser.GT_SGN]:
                self.enterOuterAlt(localctx, 12)
                self.state = 184 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 183
                        self.ch_ilg()

                    else:
                        raise NoViableAltException(self)
                    self.state = 186 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                pass
            elif token in [QueryParser.DOT]:
                self.enterOuterAlt(localctx, 13)
                self.state = 189 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 188
                        self.c_dot()

                    else:
                        raise NoViableAltException(self)
                    self.state = 191 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ldse(self):
            return self.getTypedRuleContext(QueryParser.LdseContext,0)


        def LET_DIG(self):
            return self.getToken(QueryParser.LET_DIG, 0)

        def getRuleIndex(self):
            return QueryParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):

        localctx = QueryParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_label)
        try:
            self.state = 197
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [QueryParser.LET_DIG_S_LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.ldse()
                pass
            elif token in [QueryParser.LET_DIG]:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.match(QueryParser.LET_DIG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DelimContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self):
            return self.getToken(QueryParser.WS, 0)

        def delim(self):
            return self.getTypedRuleContext(QueryParser.DelimContext,0)


        def CAMMA(self):
            return self.getToken(QueryParser.CAMMA, 0)

        def getRuleIndex(self):
            return QueryParser.RULE_delim

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelim" ):
                listener.enterDelim(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelim" ):
                listener.exitDelim(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDelim" ):
                return visitor.visitDelim(self)
            else:
                return visitor.visitChildren(self)




    def delim(self):

        localctx = QueryParser.DelimContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_delim)
        try:
            self.state = 205
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 199
                self.match(QueryParser.WS)
                self.state = 200
                self.delim()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.match(QueryParser.CAMMA)
                self.state = 202
                self.delim()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 203
                self.match(QueryParser.WS)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 204
                self.match(QueryParser.CAMMA)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ch_ilgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
